Second config export with site name, pathauto and admin_toolbar added.

--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -1,6 +1,6 @@
 uuid: ff89b6e5-e86f-442e-abcd-f200243ce796
-name: 'Drush Site-Install'
-mail: admin@example.com
+name: Ensemble!34
+mail: y.douenel@coopernet.fr
 slogan: ''
 page:
   403: ''
