--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -10,10 +10,12 @@ module:
   comment: 0
   config: 0
   contact: 0
+  content_moderation: 0
   contextual: 0
   ctools: 0
   datetime: 0
   dblog: 0
+  devel: 0
   dynamic_page_cache: 0
   editor: 0
   field: 0
@@ -42,6 +44,7 @@ module:
   update: 0
   user: 0
   views_ui: 0
+  workflows: 0
   menu_link_content: 1
   pathauto: 1
   views: 10
