--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.5.3",
         "drupal/devel": "^1.2",
+        "drupal/features": "^3.7",
         "drupal/metatag": "^1.5",
         "drupal/pathauto": "^1.2",
         "drush/drush": "^9.0.0",
