--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -9,6 +9,7 @@ module:
   color: 0
   comment: 0
   config: 0
+  config_update: 0
   contact: 0
   content_moderation: 0
   contextual: 0
@@ -18,6 +19,8 @@ module:
   devel: 0
   dynamic_page_cache: 0
   editor: 0
+  features: 0
+  features_ui: 0
   field: 0
   field_ui: 0
   file: 0
