--- a/config/sync/core.entity_view_display.node.article.teaser.yml
+++ b/config/sync/core.entity_view_display.node.article.teaser.yml
@@ -29,6 +29,9 @@ content:
       trim_length: 600
     third_party_settings: {  }
     label: hidden
+  content_moderation_control:
+    weight: -20
+    region: content
   field_image:
     type: image
     weight: -1
@@ -53,3 +56,4 @@ hidden:
   comment: true
   field_image: true
   field_tags: true
+  langcode: true
