--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -15,6 +15,7 @@ module:
   contextual: 0
   ctools: 0
   datetime: 0
+  datetime_range: 0
   dblog: 0
   devel: 0
   dynamic_page_cache: 0
@@ -25,6 +26,8 @@ module:
   field_ui: 0
   file: 0
   filter: 0
+  geofield: 0
+  geofield_map: 0
   help: 0
   history: 0
   image: 0
@@ -38,8 +41,11 @@ module:
   path: 0
   quickedit: 0
   rdf: 0
+  rest: 0
   search: 0
+  serialization: 0
   shortcut: 0
+  single_datetime: 0
   system: 0
   taxonomy: 0
   text: 0
@@ -48,6 +54,7 @@ module:
   tour: 0
   update: 0
   user: 0
+  views_geojson: 0
   views_ui: 0
   workflows: 0
   menu_link_content: 1
@@ -59,6 +66,8 @@ theme:
   classy: 0
   bartik: 0
   seven: 0
+  bootstrap: 0
+  ensemble: 0
 profile: standard
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
