--- a/config/sync/block.block.ensemble_local_tasks.yml
+++ b/config/sync/block.block.ensemble_local_tasks.yml
@@ -9,14 +9,14 @@ _core:
 id: ensemble_local_tasks
 theme: ensemble
 region: content
-weight: -40
+weight: -3
 provider: null
 plugin: local_tasks_block
 settings:
   id: local_tasks_block
   label: Onglets
   provider: core
-  label_display: '0'
+  label_display: visible
   primary: true
   secondary: true
 visibility: {  }
