--- a/config/sync/node.type.article.yml
+++ b/config/sync/node.type.article.yml
@@ -1,13 +1,18 @@
-uuid: 1fb8f9b0-d022-40d8-85c0-7431d60b6096
+uuid: c7d5385b-7ae1-4a8c-9eba-e34316e4d7b2
 langcode: fr
 status: true
-dependencies: {  }
-_core:
-  default_config_hash: AeW1SEDgb1OTQACAWGhzvMknMYAJlcZu0jljfeU3oso
+dependencies:
+  module:
+    - menu_ui
+third_party_settings:
+  menu_ui:
+    available_menus:
+      - main
+    parent: 'main:'
 name: Article
 type: article
-description: 'Utilisez les <em>articles</em> pour des contenus possédant une temporalité tels que des actualités, des communiqués de presse ou des billets de blog.'
+description: ''
 help: ''
-new_revision: true
+new_revision: false
 preview_mode: 1
-display_submitted: true
+display_submitted: false
