--- a/config/sync/user.role.contributor.yml
+++ b/config/sync/user.role.contributor.yml
@@ -7,13 +7,23 @@ label: Contributeur
 weight: -8
 is_admin: null
 permissions:
+  - 'access administration pages'
   - 'access content overview'
+  - 'access contextual links'
+  - 'access in-place editing'
   - 'access toolbar'
+  - 'administer nodes'
   - 'create article content'
+  - 'create page content'
+  - 'delete article revisions'
   - 'delete own article content'
   - 'edit own article content'
+  - 'edit own page content'
+  - 'revert article revisions'
   - 'use editorial transition create_new_draft'
+  - 'use editorial transition demande_de_validation'
   - 'use editorial transition demander_une_validation'
+  - 'use text format full_html'
   - 'view all revisions'
   - 'view any unpublished content'
   - 'view article revisions'
