--- a/config/sync/user.role.moderator.yml
+++ b/config/sync/user.role.moderator.yml
@@ -7,19 +7,27 @@ label: Moderateur
 weight: -7
 is_admin: null
 permissions:
+  - 'access administration pages'
   - 'access content overview'
+  - 'access contextual links'
+  - 'access in-place editing'
   - 'access toolbar'
+  - 'administer nodes'
   - 'create article content'
+  - 'create page content'
   - 'delete any article content'
   - 'delete own article content'
   - 'edit own article content'
+  - 'edit own page content'
   - 'use editorial transition archive'
   - 'use editorial transition archived_draft'
   - 'use editorial transition archived_published'
   - 'use editorial transition create_new_draft'
+  - 'use editorial transition demande_de_validation'
   - 'use editorial transition demander_une_modification'
   - 'use editorial transition demander_une_validation'
   - 'use editorial transition publish'
+  - 'use text format full_html'
   - 'view all revisions'
   - 'view any unpublished content'
   - 'view article revisions'
