--- a/config/sync/block.block.ensemble_local_actions.yml
+++ b/config/sync/block.block.ensemble_local_actions.yml
@@ -9,12 +9,12 @@ _core:
 id: ensemble_local_actions
 theme: ensemble
 region: content
-weight: -20
+weight: -4
 provider: null
 plugin: local_actions_block
 settings:
   id: local_actions_block
   label: 'Actions d''administration principales'
   provider: core
-  label_display: '0'
+  label_display: visible
 visibility: {  }
