--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.event.body
     - field.field.node.event.field_date
+    - field.field.node.event.field_event_type
     - field.field.node.event.field_place
     - field.field.node.event.field_release_date
     - node.type.event
@@ -43,6 +44,15 @@ content:
       year_end: ''
     third_party_settings: {  }
     type: single_date_time_widget
+    region: content
+  field_event_type:
+    weight: 26
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
     region: content
   field_place:
     weight: 8
