--- a/config/sync/block.block.ensemble_account_menu.yml
+++ b/config/sync/block.block.ensemble_account_menu.yml
@@ -12,8 +12,8 @@ _core:
   default_config_hash: DweBpscQZdG0-fHkSpUzdYucrNH45G_KF7Z82V-oyQM
 id: ensemble_account_menu
 theme: ensemble
-region: navigation
-weight: -5
+region: footer
+weight: -6
 provider: null
 plugin: 'system_menu_block:account'
 settings:
