--- a/config/sync/block.block.ensemble_footer.yml
+++ b/config/sync/block.block.ensemble_footer.yml
@@ -12,8 +12,8 @@ _core:
   default_config_hash: kkISXE1LT2FJEoYnqCrCpeFB-2pmGmMxMklVk7rQcfg
 id: ensemble_footer
 theme: ensemble
-region: navigation
-weight: -6
+region: footer
+weight: -7
 provider: null
 plugin: 'system_menu_block:footer'
 settings:
