--- a/config/sync/block.block.ensemble_tools.yml
+++ b/config/sync/block.block.ensemble_tools.yml
@@ -12,8 +12,8 @@ _core:
   default_config_hash: NeHSoqm4XFqA7_0bDmR429ZZQt3LRbZMNRJTMsFyOfI
 id: ensemble_tools
 theme: ensemble
-region: sidebar_first
-weight: 0
+region: footer
+weight: -5
 provider: null
 plugin: 'system_menu_block:tools'
 settings:
