--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.event.body
+    - field.field.node.event.field_address
     - field.field.node.event.field_date
     - field.field.node.event.field_event_type
     - field.field.node.event.field_place
@@ -11,8 +12,6 @@ dependencies:
     - node.type.event
   module:
     - datetime
-    - datetime_range
-    - geofield
     - text
     - user
 id: node.event.default
@@ -23,18 +22,25 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 0
+    weight: 1
     settings: {  }
     third_party_settings: {  }
     region: content
   content_moderation_control:
-    weight: -20
+    weight: 0
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_address:
+    weight: 3
+    label: inline
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
+    region: content
   field_date:
-    weight: 1
-    label: hidden
+    weight: 2
+    label: inline
     settings:
       format_type: medium
       timezone_override: ''
@@ -49,24 +55,8 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
-  field_place:
-    weight: 2
-    label: above
-    settings:
-      output_format: geojson
-    third_party_settings: {  }
-    type: geofield_default
-    region: content
-  field_release_date:
-    weight: 3
-    label: above
-    settings:
-      separator: '-'
-      format_type: medium
-      timezone_override: ''
-    third_party_settings: {  }
-    type: daterange_default
-    region: content
 hidden:
+  field_place: true
+  field_release_date: true
   langcode: true
   links: true
