--- a/config/sync/ensemble.settings.yml
+++ b/config/sync/ensemble.settings.yml
@@ -4,18 +4,19 @@ _core:
 favicon:
   mimetype: image/vnd.microsoft.icon
   path: ''
-  url: 'http://local.ensemble.my/themes/contrib/bootstrap/favicon.ico'
-  use_default: true
-features:
-  comment_user_picture: true
-  comment_user_verification: true
-  favicon: true
-  node_user_picture: true
-logo:
-  path: ''
-  url: ''
-  use_default: true
+  url: 'http://local.ensemble.my/themes/contrib/ensemble/less/favicon.ico'
+  use_default: 1
 schemas:
   bootstrap: 8000
   ensemble: 8000
-langcode: fr
+features:
+  comment_user_picture: 1
+  comment_user_verification: 1
+  favicon: 1
+  node_user_picture: 1
+logo:
+  path: themes/contrib/ensemble/less/images/logoEnsemble34.gif
+  url: ''
+  use_default: 0
+table_responsive: '-1'
+table: ''
