--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -26,8 +26,10 @@ module:
   field_ui: 0
   file: 0
   filter: 0
+  fixed_block_content: 0
   geofield: 0
   geofield_map: 0
+  hal: 0
   help: 0
   history: 0
   image: 0
