config export up.

--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,17 @@
         "drupal/config_installer": "^1.8",
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.5.3",
+        "drupal/crop": "^2.0",
         "drupal/devel": "^1.2",
+        "drupal/entity_embed": "^1.0@beta",
         "drupal/features": "^3.7",
         "drupal/fixed_block_content": "^1.0@RC",
         "drupal/geofield_map": "^2.5",
+        "drupal/image_widget_crop": "^2.1",
         "drupal/metatag": "^1.5",
         "drupal/pathauto": "^1.2",
         "drupal/single_datetime": "^1.6",
+        "drupal/video_embed_field": "^2.0",
         "drupal/views_geojson": "1.x-dev",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
