--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.event.field_address
     - field.field.node.event.field_date
     - field.field.node.event.field_event_type
+    - field.field.node.event.field_image
     - field.field.node.event.field_place
     - field.field.node.event.field_release_date
     - node.type.event
@@ -31,7 +32,7 @@ content:
     third_party_settings: {  }
     region: content
   field_address:
-    weight: 9
+    weight: 10
     settings:
       size: 60
       placeholder: ''
@@ -55,7 +56,16 @@ content:
     type: single_date_time_widget
     region: content
   field_event_type:
-    weight: 10
+    weight: 11
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
+  field_image:
+    weight: 3
     settings:
       match_operator: CONTAINS
       size: 60
@@ -64,7 +74,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_place:
-    weight: 8
+    weight: 9
     settings:
       map_google_places:
         places_control: '1'
@@ -97,7 +107,7 @@ content:
     type: geofield_map
     region: content
   field_release_date:
-    weight: 3
+    weight: 4
     settings:
       hour_format: 24h
       allow_times: '60'
@@ -121,13 +131,13 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 6
+    weight: 7
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 7
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -135,14 +145,14 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 4
+    weight: 5
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 5
+    weight: 6
     region: content
     third_party_settings: {  }
   title:
