--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.event.field_address
     - field.field.node.event.field_date
     - field.field.node.event.field_event_type
+    - field.field.node.event.field_image
     - field.field.node.event.field_place
     - field.field.node.event.field_release_date
     - node.type.event
@@ -54,6 +55,15 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_image:
+    type: entity_reference_entity_view
+    weight: 5
+    label: hidden
+    settings:
+      view_mode: full
+      link: false
+    third_party_settings: {  }
     region: content
 hidden:
   field_place: true
