--- a/config/sync/views.view.events.yml
+++ b/config/sync/views.view.events.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.storage.node.field_address
     - field.storage.node.field_date
     - field.storage.node.field_event_type
+    - field.storage.node.field_image
     - field.storage.node.field_place
     - node.type.event
   module:
@@ -262,7 +263,7 @@ display:
           click_sort_column: value
           type: text_summary_or_trimmed
           settings:
-            trim_length: 600
+            trim_length: 150
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -527,6 +528,69 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_image:
+          id: field_image
+          table: node__field_image
+          field: field_image
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: image
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_entity_view
+          settings:
+            view_mode: teaser
+          group_column: target_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
       filters:
         status:
           value: '1'
@@ -627,6 +691,7 @@ display:
         - 'config:field.storage.node.field_address'
         - 'config:field.storage.node.field_date'
         - 'config:field.storage.node.field_event_type'
+        - 'config:field.storage.node.field_image'
         - 'config:field.storage.node.field_place'
   page_1:
     display_plugin: page
@@ -649,6 +714,7 @@ display:
         - 'config:field.storage.node.field_address'
         - 'config:field.storage.node.field_date'
         - 'config:field.storage.node.field_event_type'
+        - 'config:field.storage.node.field_image'
         - 'config:field.storage.node.field_place'
   rest_export_1:
     display_plugin: rest_export
@@ -694,4 +760,5 @@ display:
         - 'config:field.storage.node.field_address'
         - 'config:field.storage.node.field_date'
         - 'config:field.storage.node.field_event_type'
+        - 'config:field.storage.node.field_image'
         - 'config:field.storage.node.field_place'
