composer.json composer.lock up.

--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,10 @@
         "drupal/core": "~8.5.3",
         "drupal/crop": "^2.0",
         "drupal/devel": "^1.2",
+        "drupal/ds": "^3.1",
         "drupal/entity_embed": "^1.0@beta",
         "drupal/features": "^3.7",
+        "drupal/field_group": "^1.0",
         "drupal/fixed_block_content": "^1.0@RC",
         "drupal/geofield_map": "^2.5",
         "drupal/image_widget_crop": "^2.1",
