--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.event.field_date
     - field.field.node.event.field_event_type
     - field.field.node.event.field_image
+    - field.field.node.event.field_je_m_informe
     - field.field.node.event.field_place
     - field.field.node.event.field_release_date
     - node.type.event
@@ -73,6 +74,14 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
+  field_je_m_informe:
+    type: text_textarea
+    weight: 12
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
   field_place:
     weight: 9
     settings:
