--- a/config/sync/core.entity_view_display.media.image.bandeau.yml
+++ b/config/sync/core.entity_view_display.media.image.bandeau.yml
@@ -1,25 +1,25 @@
-uuid: 7e20045b-b4ab-419c-9dc1-b0b430858172
+uuid: e5cbeed7-f426-4c1e-baaa-0a5a8edefe47
 langcode: fr
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.media.teaser
+    - core.entity_view_mode.media.bandeau
     - field.field.media.image.field_media_image
-    - image.style.medium_carre
+    - image.style.bandeau_fin
     - media.type.image
   module:
     - image
 _core:
   default_config_hash: jOwnt_yq6AKAfqU6f0xKnxEkFQ2eTPJWxrk3WMLbL68
-id: media.image.teaser
+id: media.image.bandeau
 targetEntityType: media
 bundle: image
-mode: teaser
+mode: bandeau
 content:
   field_media_image:
     label: visually_hidden
     settings:
-      image_style: medium_carre
+      image_style: bandeau_fin
       image_link: ''
     third_party_settings: {  }
     type: image
