--- a/config/sync/core.entity_view_display.media.image.default.yml
+++ b/config/sync/core.entity_view_display.media.image.default.yml
@@ -7,6 +7,8 @@ dependencies:
     - media.type.image
   module:
     - image
+    - responsive_image
+    - user
 _core:
   default_config_hash: jOwnt_yq6AKAfqU6f0xKnxEkFQ2eTPJWxrk3WMLbL68
 id: media.image.default
@@ -14,6 +16,16 @@ targetEntityType: media
 bundle: image
 mode: default
 content:
+  created:
+    type: timestamp
+    weight: 0
+    region: content
+    label: above
+    settings:
+      date_format: medium
+      custom_date_format: ''
+      timezone: ''
+    third_party_settings: {  }
   field_media_image:
     label: visually_hidden
     settings:
@@ -23,9 +35,37 @@ content:
     type: image
     weight: 1
     region: content
-hidden:
-  created: true
-  langcode: true
-  name: true
-  thumbnail: true
-  uid: true
+  langcode:
+    type: language
+    weight: 0
+    region: content
+    label: above
+    settings:
+      link_to_entity: false
+      native_language: false
+    third_party_settings: {  }
+  name:
+    type: string
+    weight: 0
+    region: content
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+  thumbnail:
+    type: responsive_image
+    weight: 0
+    region: content
+    label: above
+    settings:
+      responsive_image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+  uid:
+    type: author
+    weight: 0
+    region: content
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+hidden: {  }
