--- a/config/sync/core.entity_view_display.node.article.teaser.yml
+++ b/config/sync/core.entity_view_display.node.article.teaser.yml
@@ -5,10 +5,76 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.article.body
+    - field.field.node.article.field_image
     - node.type.article
   module:
+    - ds
+    - field_group
     - text
     - user
+third_party_settings:
+  ds:
+    layout:
+      id: ds_1col
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        wrappers:
+          ds_content: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
+    regions:
+      ds_content:
+        - node_link
+        - node_title
+        - field_image
+        - group_img_txt
+        - body
+    fields:
+      node_link:
+        plugin_id: node_link
+        weight: 0
+        label: hidden
+        formatter: default
+        settings:
+          'link text': 'Read more'
+          'link class': read-more
+          wrapper: ''
+          class: ''
+      node_title:
+        plugin_id: node_title
+        weight: 0
+        label: hidden
+        formatter: default
+        settings:
+          link: true
+          wrapper: h3
+          class: 'article event-article-home-title'
+  field_group:
+    group_img_txt:
+      children:
+        - node_link
+        - field_image
+        - body
+      parent_name: ''
+      weight: 1
+      format_type: html_element
+      format_settings:
+        label: 'img txt'
+        element: div
+        show_label: false
+        label_element: h3
+        attributes: ''
+        effect: none
+        speed: fast
+        id: ''
+        classes: img-txt
+      label: 'img txt'
 id: node.article.teaser
 targetEntityType: node
 bundle: article
@@ -17,13 +83,21 @@ content:
   body:
     label: hidden
     type: text_summary_or_trimmed
-    weight: 101
+    weight: 2
     settings:
-      trim_length: 600
+      trim_length: 200
     third_party_settings: {  }
-    region: content
-  links:
-    weight: 100
-    region: content
+    region: ds_content
+  field_image:
+    type: entity_reference_entity_view
+    weight: 1
+    region: ds_content
+    label: hidden
+    settings:
+      view_mode: teaser
+      link: false
+    third_party_settings: {  }
 hidden:
+  content_moderation_control: true
   langcode: true
+  links: true
