--- a/config/sync/editor.editor.full_html.yml
+++ b/config/sync/editor.editor.full_html.yml
@@ -39,6 +39,7 @@ settings:
           items:
             - Blockquote
             - DrupalImage
+            - video_embed
             - Table
             - HorizontalRule
         -
@@ -53,11 +54,20 @@ settings:
   plugins:
     stylescombo:
       styles: ''
+    language:
+      language_list: un
+    video_embed:
+      defaults:
+        children:
+          autoplay: true
+          responsive: true
+          width: '854'
+          height: '480'
 image_upload:
   status: true
   scheme: public
   directory: inline-images
   max_size: ''
   max_dimensions:
-    width: 0
-    height: 0
+    width: null
+    height: null
