--- a/config/sync/image.style.portrait_large.yml
+++ b/config/sync/image.style.portrait_large.yml
@@ -9,16 +9,17 @@ dependencies:
 name: portrait_large
 label: 'Portrait large 450x800'
 effects:
-  3350085f-d136-410e-a24f-51116f8cac2b:
-    uuid: 3350085f-d136-410e-a24f-51116f8cac2b
-    id: image_scale_and_crop
-    weight: -9
-    data:
-      width: 450
-      height: 800
   8bf49ea3-c31e-467d-aab9-70a57b5a947c:
     uuid: 8bf49ea3-c31e-467d-aab9-70a57b5a947c
     id: crop_crop
     weight: -10
     data:
       crop_type: portrait_large
+  a0929459-0ff9-4d29-9b04-b01916bb1e2b:
+    uuid: a0929459-0ff9-4d29-9b04-b01916bb1e2b
+    id: image_scale
+    weight: 2
+    data:
+      width: 450
+      height: 800
+      upscale: false
