--- a/config/sync/views.view.events.yml
+++ b/config/sync/views.view.events.yml
@@ -579,7 +579,7 @@ display:
           click_sort_column: target_id
           type: entity_reference_entity_view
           settings:
-            view_mode: teaser
+            view_mode: full
           group_column: target_id
           group_columns: {  }
           group_rows: true
