--- a/config/sync/views.view.frontpage.yml
+++ b/config/sync/views.view.frontpage.yml
@@ -291,6 +291,24 @@ display:
     display_options:
       path: node
       display_extenders: {  }
+      style:
+        type: grid
+        options:
+          uses_fields: false
+          columns: 3
+          automatic_width: true
+          alignment: horizontal
+          col_class_default: true
+          col_class_custom: col-md-4
+          row_class_default: true
+          row_class_custom: row
+      defaults:
+        style: false
+        row: false
+      row:
+        type: 'entity:node'
+        options:
+          view_mode: teaser
     display_plugin: page
     display_title: Page
     id: page_1
