--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.event.body
     - field.field.node.event.field_address
     - field.field.node.event.field_date
+    - field.field.node.event.field_document
     - field.field.node.event.field_event_type
     - field.field.node.event.field_image
     - field.field.node.event.field_je_m_informe
@@ -47,6 +48,7 @@ third_party_settings:
         - field_date
         - node_changed_date
         - field_address
+        - field_document
         - field_place
     fields:
       node_changed_date:
@@ -82,6 +84,15 @@ content:
       timezone_override: ''
       date_format: 'l d F Y H:i'
     third_party_settings: {  }
+  field_document:
+    type: entity_reference_entity_view
+    weight: 6
+    label: above
+    settings:
+      view_mode: default
+      link: false
+    third_party_settings: {  }
+    region: right
   field_image:
     type: entity_reference_entity_view
     weight: 1
@@ -100,7 +111,7 @@ content:
     region: header
   field_place:
     type: geofield_google_map
-    weight: 6
+    weight: 7
     region: right
     label: hidden
     settings:
