--- a/config/sync/user.role.contributor.yml
+++ b/config/sync/user.role.contributor.yml
@@ -14,15 +14,19 @@ permissions:
   - 'access toolbar'
   - 'administer nodes'
   - 'create article content'
+  - 'create event content'
   - 'create page content'
   - 'delete article revisions'
   - 'delete own article content'
+  - 'delete own event content'
   - 'edit own article content'
+  - 'edit own event content'
   - 'edit own page content'
   - 'revert article revisions'
   - 'use editorial transition create_new_draft'
   - 'use editorial transition demande_de_validation'
   - 'use editorial transition demander_une_validation'
+  - 'use text format basic_html'
   - 'use text format full_html'
   - 'view all revisions'
   - 'view any unpublished content'
