--- a/config/sync/views.view.content.yml
+++ b/config/sync/views.view.content.yml
@@ -162,7 +162,7 @@ display:
           id: title
           table: node_field_data
           field: title
-          label: Titre
+          label: Title
           exclude: false
           alter:
             alter_text: false
@@ -370,7 +370,7 @@ display:
           exposed: true
           expose:
             operator_id: title_op
-            label: Titre
+            label: Title
             description: ''
             use_operator: false
             operator: title_op
