--- a/config/sync/views.view.files.yml
+++ b/config/sync/views.view.files.yml
@@ -8,7 +8,7 @@ dependencies:
 _core:
   default_config_hash: rRWxAX-IQkJ5viACQRovRkC784EyCl9493GU_G23n2Q
 id: files
-label: Fichiers
+label: Files
 module: file
 description: 'Trouver et gérer les fichiers.'
 tag: default
@@ -586,7 +586,7 @@ display:
           exposed: true
           expose:
             operator_id: filemime_op
-            label: 'Nom du fichier'
+            label: Filename
             description: ''
             use_operator: false
             operator: filename_op
@@ -695,7 +695,7 @@ display:
           entity_type: file
           entity_field: status
       sorts: {  }
-      title: Fichiers
+      title: Files
       header: {  }
       footer: {  }
       empty:
@@ -737,7 +737,7 @@ display:
       path: admin/content/files
       menu:
         type: tab
-        title: Fichiers
+        title: Files
         description: ''
         menu_name: admin
         weight: 0
