--- a/config/sync/views.view.moderated_content.yml
+++ b/config/sync/views.view.moderated_content.yml
@@ -136,7 +136,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: Titre
+          label: Title
           exclude: false
           alter:
             alter_text: false
@@ -556,7 +556,7 @@ display:
           exposed: true
           expose:
             operator_id: title_op
-            label: Titre
+            label: Title
             description: ''
             use_operator: false
             operator: title_op
