--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -3,9 +3,11 @@ langcode: fr
 status: true
 dependencies:
   config:
+    - entity_browser.browser.assets_browser
     - field.field.node.event.body
     - field.field.node.event.field_address
     - field.field.node.event.field_date
+    - field.field.node.event.field_document
     - field.field.node.event.field_event_type
     - field.field.node.event.field_image
     - field.field.node.event.field_je_m_informe
@@ -14,6 +16,7 @@ dependencies:
     - node.type.event
   module:
     - content_moderation
+    - entity_browser
     - geofield_map
     - path
     - single_datetime
@@ -33,7 +36,7 @@ content:
     third_party_settings: {  }
     region: content
   field_address:
-    weight: 10
+    weight: 11
     settings:
       size: 60
       placeholder: ''
@@ -56,8 +59,22 @@ content:
     third_party_settings: {  }
     type: single_date_time_widget
     region: content
+  field_document:
+    weight: 4
+    settings:
+      entity_browser: file_browser
+      field_widget_display: label
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      field_widget_replace: false
+      open: false
+      field_widget_display_settings: {  }
+    third_party_settings: {  }
+    type: entity_browser_entity_reference
+    region: content
   field_event_type:
-    weight: 11
+    weight: 12
     settings:
       match_operator: CONTAINS
       size: 60
@@ -66,24 +83,29 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_image:
+    type: entity_browser_entity_reference
     weight: 3
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete
     region: content
+    settings:
+      entity_browser: assets_browser
+      field_widget_display: label
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      field_widget_replace: false
+      open: false
+      field_widget_display_settings: {  }
+    third_party_settings: {  }
   field_je_m_informe:
     type: text_textarea
-    weight: 12
+    weight: 13
     region: content
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
   field_place:
-    weight: 9
+    weight: 10
     settings:
       map_google_places:
         places_control: '1'
@@ -116,7 +138,7 @@ content:
     type: geofield_map
     region: content
   field_release_date:
-    weight: 4
+    weight: 5
     settings:
       hour_format: 24h
       allow_times: '60'
@@ -140,13 +162,13 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 7
+    weight: 8
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 8
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -154,14 +176,14 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 5
+    weight: 6
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 6
+    weight: 7
     region: content
     third_party_settings: {  }
   title:
