--- a/config/sync/core.entity_view_display.media.file.default.yml
+++ b/config/sync/core.entity_view_display.media.file.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.media.file.field_media_file
+    - field.field.media.file.field_tag_media
     - media.type.file
   module:
     - file
@@ -20,6 +21,14 @@ content:
     third_party_settings: {  }
     type: file_default
     weight: 1
+    region: content
+  field_tag_media:
+    weight: 2
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
 hidden:
   created: true
