--- a/config/sync/core.entity_view_display.media.image.default.yml
+++ b/config/sync/core.entity_view_display.media.image.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.media.image.field_media_image
+    - field.field.media.image.field_tag_media
     - media.type.image
   module:
     - image
@@ -34,6 +35,14 @@ content:
     third_party_settings: {  }
     type: image
     weight: 1
+    region: content
+  field_tag_media:
+    weight: 2
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   langcode:
     type: language
