--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -22,6 +22,7 @@ module:
   dynamic_page_cache: 0
   editor: 0
   embed: 0
+  entity_browser: 0
   entity_embed: 0
   features: 0
   features_ui: 0
@@ -38,6 +39,7 @@ module:
   history: 0
   image: 0
   image_widget_crop: 0
+  inline_entity_form: 0
   language: 0
   layout_discovery: 0
   link: 0
