--- a/config/sync/editor.editor.full_html.yml
+++ b/config/sync/editor.editor.full_html.yml
@@ -40,6 +40,7 @@ settings:
             - Blockquote
             - DrupalImage
             - video_embed
+            - assets
             - Table
             - HorizontalRule
         -
@@ -67,7 +68,7 @@ image_upload:
   status: true
   scheme: public
   directory: inline-images
-  max_size: ''
+  max_size: '6 Mo'
   max_dimensions:
     width: null
     height: null
