--- a/config/sync/user.role.moderator.yml
+++ b/config/sync/user.role.moderator.yml
@@ -14,10 +14,15 @@ permissions:
   - 'access toolbar'
   - 'administer nodes'
   - 'create article content'
+  - 'create event content'
   - 'create page content'
   - 'delete any article content'
+  - 'delete any event content'
   - 'delete own article content'
+  - 'delete own event content'
+  - 'edit any event content'
   - 'edit own article content'
+  - 'edit own event content'
   - 'edit own page content'
   - 'use editorial transition archive'
   - 'use editorial transition archived_draft'
@@ -27,10 +32,12 @@ permissions:
   - 'use editorial transition demander_une_modification'
   - 'use editorial transition demander_une_validation'
   - 'use editorial transition publish'
+  - 'use text format basic_html'
   - 'use text format full_html'
   - 'view all revisions'
   - 'view any unpublished content'
   - 'view article revisions'
+  - 'view event revisions'
   - 'view latest version'
   - 'view own unpublished content'
   - 'view the administration theme'
