--- a/web/themes/contrib/ensemble/less/ensemble.libraries.yml
+++ b/web/themes/contrib/ensemble/less/ensemble.libraries.yml
@@ -23,6 +23,10 @@ leaflet:
   dependencies:
     - core/jquery
 
+checktopscroll:
+  js:
+    js/checktopscroll/checktopscroll.js: {}
+
 sameheight:
   js:
     js/sameheight/jquery.matchHeight-min.js: {}
@@ -32,5 +36,11 @@ sameheight:
 sameheighttitles:
   js:
     js/sameheight/same-height-titles.js: {}
+  dependencies:
+      - core/jquery
+
+slideshow:
+  js:
+    js/slideshow/slideshow.js: {}
   dependencies:
       - core/jquery
