--- a/config/sync/core.entity_form_display.media.image.default.yml
+++ b/config/sync/core.entity_form_display.media.image.default.yml
@@ -35,6 +35,7 @@ content:
         - large_landsacape
         - medium_carre
         - portrait_large
+        - slideshow
       progress_indicator: throbber
       show_crop_area: false
     third_party_settings: {  }
