--- a/config/sync/core.entity_form_display.node.article.default.yml
+++ b/config/sync/core.entity_form_display.node.article.default.yml
@@ -5,9 +5,11 @@ dependencies:
   config:
     - field.field.node.article.body
     - field.field.node.article.field_image
+    - field.field.node.article.field_release_date
     - node.type.article
   module:
     - content_moderation
+    - datetime_range
     - path
     - text
 id: node.article.default
@@ -38,6 +40,12 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: entity_reference_autocomplete
+    region: content
+  field_release_date:
+    weight: 123
+    settings: {  }
+    third_party_settings: {  }
+    type: daterange_default
     region: content
   langcode:
     type: language_select
