--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -96,14 +96,6 @@ content:
       open: false
       field_widget_display_settings: {  }
     third_party_settings: {  }
-  field_je_m_informe:
-    type: text_textarea
-    weight: 13
-    region: content
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings: {  }
   field_place:
     weight: 10
     settings:
@@ -196,6 +188,7 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
+  field_je_m_informe: true
   langcode: true
   status: true
   uid: true
