ensemble.libraries.yml up to add encentive.js library.

--- a/web/themes/contrib/ensemble/less/ensemble.libraries.yml
+++ b/web/themes/contrib/ensemble/less/ensemble.libraries.yml
@@ -44,3 +44,9 @@ slideshow:
     js/slideshow/slideshow.js: {}
   dependencies:
       - core/jquery
+
+incentive:
+  js:
+    js/incentive/incentive.js: {}
+  dependencies:
+      - core/jquery
